--- a/app/views/venues/index.html.haml
+++ b/app/views/venues/index.html.haml
@@ -1,2 +1,5 @@
-<h1>Venues#index</h1>
-<p>Find me in app/views/venues/index.html.erb</p>
+%h1 Venues
+
+- @venues.each do |venue|
+  %p
+    = link_to venue.name, venue_path(venue)
