--- a/app/views/venues/_single_venue_script.html.erb
+++ b/app/views/venues/_single_venue_script.html.erb
@@ -12,7 +12,7 @@
     };
     var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
     
-    var venue = [[ '<%= venue.name %>', <%= venue.lat %>, <%= venue.lng %> ]]
+    var venue = [[ "<%= venue.name %>", <%= venue.lat %>, <%= venue.lng %> ]]
     set_markers(map, venue);
   }
   
